# SeerODBC

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  REUSE.toml  SECURITY.md  meson.build  meson_options.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  reuse.yml  tests.yml
docs/: ARCHITECTURE.md  ODBC_CONFORMANCE.md  PROTOCOL.md  ROADMAP.md
include/seer/: seertns.h
packaging/: odbcinst.ini.sample  seerodbc.spec
src/common/: charset.c  charset.h  log.c  log.h  meson.build
src/odbc/: attrs.c  catalog.c  connect.c  convert.c  convert.h  diag.c  exec.c  handles.c  info.c  meson.build  odbc_internal.h  odbcini.c  odbcini.h  results.c  seerodbc.map  sqlprep.c  sqlprep.h  unicode.c
src/tns/: auth.c  auth.h  conn.h  json.c  json.h  lob.c  lob.h  marshal.c  marshal.h  meson.build  oson.c  oson.h  packet.c  packet.h  reader.c  reader.h  session.c  stmt.c  tns_consts.h  transport.c  transport.h  ttc.c  ttc.h  types.c  types.h  writer.c  writer.h
tests/: lsan.supp  meson.build
tests/fuzz/: build-fuzz.sh  fuzz_decoders.c  fuzz_images.c
tests/odbc/: aq_test.c  objbind_test.c  run-matrix.sh  test_9i.c  test_integration.c  tls_proxy.py  tpc_test.c
tests/unit/: test_auth.c  test_convert.c  test_json.c  test_marshal.c  test_number.c  test_odbcini.c  test_reader.c  test_sqlprep.c  test_writer.c
tools/freeoracle/: main.c  meson.build
